--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,15 @@
     	<artifactId>tagsoup</artifactId>
     	<version>1.2.1</version>
     </dependency>
+    <dependency>
+    	<groupId>org.openrdf.sesame</groupId>
+    	<artifactId>sesame-runtime</artifactId>
+    	<version>2.8.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>ch.qos.logback</groupId>
+    	<artifactId>logback-classic</artifactId>
+    	<version>1.0.13</version>
+    </dependency>
   </dependencies>
 </project>
