ADD: apache commons validator for checking for valid URLs

--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
     	<artifactId>logback-classic</artifactId>
     	<version>1.0.13</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-validator</groupId>
+    	<artifactId>commons-validator</artifactId>
+    	<version>1.4.1</version>
+    </dependency>
   </dependencies>
 </project>
